# DAWN

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
dawn-bindings/: Cargo.toml
dawn-bindings/src/: backend.rs  lib.rs
dawn-infra/: Cargo.toml
dawn-infra/src/: backend.rs  codec.rs  dap_requests.rs  debugger.rs  lib.rs
dawn-plugin/: .gitignore  Cargo.toml
dawn-plugin/src/: lib.rs  main.rs  nix_debugger.rs
dawn-plugin/tests/: initialize_test.rs  launch_test.rs
dawn-plugin/tests/common/: request.rs  session.rs
tvix-debugger/: Cargo.toml
tvix-debugger/src/: backend.rs  commands.rs  config.rs  input.rs  lib.rs  main.rs  observer.rs  serde_smolstr.rs
tvix-debugger/tests/: simple.nix  simple_fn_call.nix
