[workspace]
members = [
        "dawn-plugin",
        "dawn-infra",
        "tvix-debugger",
]
resolver = "2"
exclude = ["target_dirs", ".github"]

[workspace.package]
rust-version = "1.85.0"
edition = "2021"
version = "0.1.0"
exclude = ["target_dirs", ".github", "target"]
authors = [ "Justin Restivo (justin.p.restivo@gmail.com)", "Jachym Putta (jachym.putta@gmail.com)"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/DieracDelta/DAWN"
keywords = ["nix", "dap", "debugger", "adapter", "dawn"]
categories = ["development-tools::debugging"]

[profile.release]
incremental = true
panic = "abort"

[profile.dev]
panic = "abort"
