[package]
name = "dawn-bindings"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
exclude.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tvix-eval = { git = "https://github.com/tvlfyi/tvix.git", version = "0.1.0" }
