[package]
name = "dawn-infra"
description = "DAP server-side implementation infra"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors =  { workspace = true }
license-file =  { workspace = true }
readme =  { workspace = true }
repository =  { workspace = true }
keywords =  { workspace = true }
categories =  { workspace = true }
exclude =  { workspace = true }

[dependencies]
tokio = {version = "1.45.0", default-features = false, features = [ "full" ] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
snafu = "0.8.5"
debug_types = "1.0.0"
tokio-util = { version = "0.7.15", features = ["codec"]}
futures = { version = "0.3.31"}
async-trait = "0.1.88"


serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["unbounded_depth"] }
bytes = { version = "1.10.1"}
memchr = { version = "2.7.4"}
httparse = { version = "1.10.1"}
nll = { git = "https://github.com/EspressoSystems/nll" }
futures-util = { version = "0.3.31"}
either = "1.15.0"

tower-lsp = { version = "0.20.0" }
tower-service = "0.3.3"

atomic_enum = "0.3.0"
